[project]
name = "redadair-simpro-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.13.0.2",
    "openai-agents>=0.4.2",
]

[project.scripts]
server = "src.main:main"
services = "src.services.simpro:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
